--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
+    "ol": "^10.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "shadcn": "2.2.0-canary.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
